[package]
name = "auth-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"]}
axum = "0.8.7"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
bcrypt = "0.17"
dotenvy = "0.15"